Fixed vertical alignment and a missing end tag

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,8 +48,8 @@ thead > tr > td{
     text-align: center;
 }
 
-.table-body > tr > td {
-    height: 100px;
+.table > tbody > tr > td {
+    vertical-align: middle;
     text-align: center;
 }
 
